src/objects/SFTestUpdateSObject__c.object
<CustomObject>
    <fields>
        <fullName>CheckBox__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFTestMergeSObjects__c</fullName>
        <label>SFTestMergeSObjects</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFTestUpdateField__c</fullName>
        <label>SFTestUpdateField</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryField__c</fullName>
        <label>Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestRetrieveLocation__c</fullName>
        <label>TestRetrieveLocation</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>TestUpdateRetrievedField__c</fullName>
        <label>TestUpdateRetrieved</label>
        <type>Date</type>
    </fields>
    <label>SFTestUpdateSObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFTestUpdateSObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>